2008-03-08  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #7748: IRRE - Storage page for combined child records not used

2008-03-08  Dmitry Dulepov  <dmitry@typo3.org>

	* Follow up on bug #7588: respect TSConfig settings for cache clearing (patch by Helmut Hummel)

2008-03-07  Stanislas Rolland  <typo3@sjbr.ca>

	* Added two icons to htmlArea RTE skin for definition lists
	* Cleaned up dead code related to htmlArea RTE popups
	* Fixed bug #7788: htmlArea RTE: pageTSConfig from Inline Elements extension not included

2008-03-06  Ingo Renner  <ingo@typo3.org>

	* Post cleanup of topapps, some parts were not removed with Changeset 2908

2008-03-05  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #7757: htmlArea RTE: Alternating table rows/columns should start at 1
	* Fixed bug #7770: htmlArea RTE: shift+tab in table body does not move back into thead
	* Fixed bug #7773: htmlArea RTE loads plugins in wrong order
	* Fixed bug #7774: htmlArea RTE: toolbar not updated in IE7 on up/right/down/left arrow
	* Cleaned up dead code related to htmlArea RTE clickenlarge feature

2008-03-04  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #7754: htmlArea RTE: Caption should be first element in table
	* Fixed bug #7755: htmlArea RTE: incorrect handling of enter key in definition lists

2008-03-03  Ingo Renner  <ingo@typo3.org>

	* Release of TYPO3 4.2.0beta3

2008-03-03  Patrick Broens  <patrick@patrickbroens.nl>

	* Fixed bug #7532: Docheaders: Wizard New Content Element (db_new_content_el.php): No docheader
	* Fixed bug #7527: Docheaders: Wizard New Record/New page (db_new.php): No docheader
	* Fixed bug #7540: Docheaders: Wizard Move Element (move_el.php): No docheader
	* Fixed bug #7562: Docheaders: Module History: No docheader

2008-03-03  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #7601: Remove checkbox border from t3skin in Internet Explorer

2008-03-03  Michael Stucki  <michael@typo3.org>

	* Fixed bug #7729: Login screen needs to be XCLASSable